--- a/JockeyGames.Client/Views/Games1/Delete.cshtml
+++ b/JockeyGames.Client/Views/Games1/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model JockeyGames.Models.DTOs.PlayerDTO
+﻿@model JockeyGames.Models.PingPong.Game
 
 @{
     ViewBag.Title = "Delete";
@@ -8,17 +8,9 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Player</h4>
+    <h4>Game</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
