--- a/JockeyGames.Client/Views/Games1/Details.cshtml
+++ b/JockeyGames.Client/Views/Games1/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model JockeyGames.Models.DTOs.PlayerDTO
+﻿@model JockeyGames.Models.PingPong.Game
 
 @{
     ViewBag.Title = "Details";
@@ -7,17 +7,9 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Player</h4>
+    <h4>Game</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
     </dl>
 </div>
 <p>
