--- a/JockeyGames.Client/Views/Games1/Index.cshtml
+++ b/JockeyGames.Client/Views/Games1/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<JockeyGames.Models.DTOs.PlayerDTO>
+﻿@model IEnumerable<JockeyGames.Models.PingPong.Game>
 
 @{
     ViewBag.Title = "Index";
@@ -11,17 +11,11 @@
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
