made things simpler

--- a/JockeyGames.Client/Views/Home/Crud.cshtml
+++ b/JockeyGames.Client/Views/Home/Crud.cshtml
@@ -9,8 +9,7 @@
     <div class="col-md-12">
         <ul>
             <li>@Html.ActionLink("Players", "Index", "Players")</li>
-            <li>@Html.ActionLink("PlayerGames", "Index", "PlayerGames")</li>
-            <li>@Html.ActionLink("Games", "Index", "Games")</li>
+            <li>@Html.ActionLink("Matches", "Index", "Matches")</li>
         </ul>        
     </div>
 </div>
