--- a/JockeyGames.Client/Content/Site.css
+++ b/JockeyGames.Client/Content/Site.css
@@ -1,6 +1,9 @@
 ﻿body {
     padding-top: 50px;
-    padding-bottom: 20px;
+}
+html, body{
+    height: 100%;
+    margin: 0;
 }
 
 /* Set padding to keep content from hitting the edges */
