--- a/JockeyGames.Client/Views/Home/Index.cshtml
+++ b/JockeyGames.Client/Views/Home/Index.cshtml
@@ -3,20 +3,24 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Jockey Games</h1>
+    <p class="lead">Keep track of all of your scores!</p>
 </div>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
         <h2>Players</h2>
-        <p>A</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>View/create players</p>
+        <p><a class="btn btn-default" href="/players">Go &raquo;</a></p>
     </div>
-    <div class="col-md-6">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="col-md-4">
+        <h2>Matches</h2>
+        <p>Add match data</p>
+        <p><a class="btn btn-default" href="/matches">Go &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Stats</h2>
+        <p>View statistics</p>
+        <p><a class="btn btn-default" href="/stats">Go &raquo;</a></p>
     </div>
 </div>
