--- a/JockeyGames.Client/Views/Shared/_Layout.cshtml
+++ b/JockeyGames.Client/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("CRUD", "Crud", "Home")</li>
+                    <li>@Html.ActionLink("Support", "Support", "Home")</li>
+                    <li>@Html.ActionLink("Stats", "Index", "Stats")</li>
                 </ul>
             </div>
         </div>
