adding more stats

--- a/JockeyGames.Client/Views/Stats/All.cshtml
+++ b/JockeyGames.Client/Views/Stats/All.cshtml
@@ -26,8 +26,8 @@
                         <a href="/Stats/Details/@(list[i].PlayerId)">@list[i].Name</a>
                     </td>
                     <td>@list[i].MatchScore</td>
-                    <td>@list[i].GameWinPercentage</td>
-                    <td>@list[i].MatchWinPercentage</td>
+                    <td>@(list[i].GameWinPercentage)%</td>
+                    <td>@(list[i].MatchWinPercentage)%</td>
                 </tr>
             }
         </tbody>
