--- a/JockeyGames.Client/Views/Home/Index.cshtml
+++ b/JockeyGames.Client/Views/Home/Index.cshtml
@@ -7,6 +7,11 @@
     <p class="lead">Keep track of all of your scores!</p>
 </div>
 
+<div class="alert alert-success">
+    You may now enter in scores of any matches you play (11 points, 21 points, etc.)<br />
+    Previously, you could only enter in scores for matches playing to 11 points
+</div>
+
 <div class="row">
     <div class="col-md-4">
         <h2>Players</h2>
