--- a/JockeyGames.Client/Views/Matches/Create.cshtml
+++ b/JockeyGames.Client/Views/Matches/Create.cshtml
@@ -5,6 +5,10 @@
 }
 
 <h2>Create</h2>
+<div class="alert alert-success">
+    You may now enter in scores of any matches you play (11 points, 21 points, etc.)<br />
+    Previously, you could only enter in scores for matches playing to 11 points
+</div>
 
 @using (Html.BeginForm()) 
 {
