--- a/JockeyGames.Client/Views/Shared/_Layout.cshtml
+++ b/JockeyGames.Client/Views/Shared/_Layout.cshtml
@@ -21,7 +21,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Support", "Support", "Home")</li>
-                    <li>@Html.ActionLink("Stats", "Index", "Stats")</li>
+                    <li>@Html.ActionLink("Stats", "All", "Stats")</li>
+                    <li>@Html.ActionLink("Players", "Index", "Players")</li>
+                    <li>@Html.ActionLink("Matches", "Index", "Matches")</li>
+                    <li>@Html.ActionLink("Tournament", "Tournament", "Home")</li>
                 </ul>
             </div>
         </div>
