another copy change

--- a/JockeyGames.Client/Views/Home/Tournament.cshtml
+++ b/JockeyGames.Client/Views/Home/Tournament.cshtml
@@ -12,8 +12,8 @@
     <ul>
         <li>The next tournament will begin in early April! You have until 3/31 to play matches and enter in your games on the site.</li>
         <li>Seeds for the tournament will be determined based on your Match score®</li>
-        <li>Based on your seed, you will be put on a team for the tournament. To be decided, you will get points based on your performance
-        during tournament games. The team with the most points at the end wins</li>
+        <li>Based on your seed, you will be put on a team for the tournament. To be decided is how the bracket will work from there,
+        I will update this with details when they become available. The team with the most points at the end wins</li>
         <li>We will have a potluck lunch following the tournament</li>
         <li>Questions? Email <a href="mailto:zach.wenta@jockey.com">zach.wenta@jockey.com</a></li>
     </ul>
