put bracket in the site

--- a/JockeyGames.Client/Views/Home/Tournament.cshtml
+++ b/JockeyGames.Client/Views/Home/Tournament.cshtml
@@ -9,12 +9,91 @@
 </div>
 
 <div>
-    <ul>
-        <li>The next tournament will begin in early April! You have until 3/31 to play matches and enter in your games on the site.</li>
-        <li>Seeds for the tournament will be determined based on your Match score®</li>
-        <li>Based on your seed, you will be put on a team for the tournament. To be decided is how the bracket will work from there,
-        I will update this with details when they become available. The team with the most points at the end wins</li>
-        <li>We will have a potluck lunch following the tournament</li>
+    <h3>Ping Pong Madness (Tournament #2) rules</h3>
+    <ol>
+        <li>Based on your Match score®, you have been put in a group. Groups have been given a contient (similarly how in the World Cup, teams are from different countries)</li>
+        <li>Play 1 match (best 2 out of 3 games), against everyone in your group. (Put your scores in <a target="_blank" href="/matches/create">HERE</a>)</li>
+        <ul>
+            <li>Top 2 players in each group will progress to the bracket.</li>
+            <li>A head to head will serve as a tiebreaker (if one occurs).</li>
+            <li>In the event of a second tie, the player with more average points per game will determine the winner.</li>
+            <li>(Players will be denoted in the bracket by the letter of your group followed by a number - the top player of group C is 'C1')</li>
+        </ul>
+        <li>Anyone who did not place top 2 in your group can still play in the bracket.</li>
+        <ul>
+            <li>The next top 6 players will be placed in the bracked as determined by the win record (over all matches played in the tournament).</li>
+            <li>Both players play one game to 21 points to serve as a tiebraker (if one occurs). Multiple tiebreakers may need to be played if multiple ties occur</li>
+            <li>(Players will be denoted in the bracket by your position from this ranking - the top player is 'X1')</li>
+        </ul>
+        <li>The player's team who wins the bracket, wins the tournament</li>                                    
         <li>Questions? Email <a href="mailto:zach.wenta@jockey.com">zach.wenta@jockey.com</a></li>
-    </ul>
+    </ol>
+
+    <hr />
+    <h3>Groups</h3>
+    <p>Group A (North America)</p>
+    <ol>
+        <li><a href="/Stats/Details/38">Nathan B</a></li>
+        <li><a href="/Stats/Details/30">Phil A</a></li>
+        <li><a href="/Stats/Details/9">Josh M</a></li>
+        <li><a href="/Stats/Details/29">Matt N</a></li>
+        <li><a href="/Stats/Details/16">Jenni A</a></li>
+        <li><a href="/Stats/Details/42">Matt W</a></li>
+    </ol>
+
+    <p>Group B (South America)</p>
+    <ol>
+        <li><a href="/Stats/Details/20">Zach W</a></li>
+        <li><a href="/Stats/Details/28">Andrew P</a></li>
+        <li><a href="/Stats/Details/39">Connie F</a></li>
+        <li><a href="/Stats/Details/15">Steph J</a></li>
+        <li><a href="/Stats/Details/34">Dan M</a></li>
+    </ol>
+
+    <p>Group C (Africa)</p>
+    <ol>
+        <li><a href="/Stats/Details/17">Tim E</a></li>
+        <li><a href="/Stats/Details/21">Mike H</a></li>
+        <li><a href="/Stats/Details/10">Sarah N</a></li>
+        <li><a href="/Stats/Details/19">Emilio V</a></li>
+        <li><a href="/Stats/Details/45">Breanne M</a></li>
+    </ol>
+
+    <p>Group D (Europe)</p>
+    <ol>
+        <li><a href="/Stats/Details/41">Glenn S</a></li>
+        <li><a href="/Stats/Details/13">Chris U</a></li>
+        <li><a href="/Stats/Details/11">Kadie K</a></li>
+        <li><a href="/Stats/Details/31">Will W</a></li>
+        <li><a href="/Stats/Details/44">David G</a></li>
+    </ol>
+
+    <p>Group E (Asia)</p>
+    <ol>
+        <li><a href="/Stats/Details/18">Dave Z</a></li>
+        <li><a href="/Stats/Details/33">Zach K</a></li>
+        <li><a href="/Stats/Details/32">Ashley M</a></li>
+        <li><a href="/Stats/Details/35">Anthony R</a></li>
+        <li><a href="/Stats/Details/37">Katie N</a></li>        
+    </ol>
+
+    <p>X1 - X3 (Antartica) [top 3 of 6 players]</p>
+    <ol>
+        <li>TBD</li>
+    </ol>
+
+    <p>X4 - X6 (Australia) [bottom 3 of 6 players]</p>
+    <ol>
+        <li>TBD</li>
+    </ol>
+
+    <hr />
+    <div id="BracketsNinja_f41f8d6e1c6d2bbf0de45c01d240f0cf"></div>
+    <script type="text/javascript">
+        (function() {
+        var bn = document.createElement('script'); bn.type = 'text/javascript';
+        bn.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'www.bracketsninja.com/api/bracket/f41f8d6e1c6d2bbf0de45c01d240f0cf?bnurl=' + window.location.href;
+        var s = document.getElementsByTagName('head')[0].appendChild(bn);
+        })();
+    </script>
 </div>
