keeping track of games

--- a/JockeyGames.Client/Views/Home/Tournament.cshtml
+++ b/JockeyGames.Client/Views/Home/Tournament.cshtml
@@ -42,8 +42,8 @@
 
     <p>Group B (South America)</p>
     <ol>
-        <li><a href="/Stats/Details/20">Zach W</a></li>
-        <li><a href="/Stats/Details/28">Andrew P</a></li>
+        <li><a href="/Stats/Details/20">Zach W</a> 0-1</li>
+        <li><a href="/Stats/Details/28">Andrew P</a> 1-0</li>
         <li><a href="/Stats/Details/39">Connie F</a></li>
         <li><a href="/Stats/Details/15">Steph J</a></li>
         <li><a href="/Stats/Details/34">Dan M</a></li>
