updated games on tournament page

--- a/JockeyGames.Client/Views/Home/Tournament.cshtml
+++ b/JockeyGames.Client/Views/Home/Tournament.cshtml
@@ -33,17 +33,17 @@
     <h3>Groups</h3>
     <p>Group A (North America)</p>
     <ol>
-        <li><a href="/Stats/Details/38">Nathan B</a></li>
+        <li><a href="/Stats/Details/38">Nathan B</a> (1-0)</li>
         <li><a href="/Stats/Details/30">Phil A</a></li>
         <li><a href="/Stats/Details/9">Josh M</a></li>
-        <li><a href="/Stats/Details/29">Matt N</a></li>
+        <li><a href="/Stats/Details/29">Matt N</a> (0-1)</li>
         <li><a href="/Stats/Details/16">Jenni A</a></li>        
     </ol>
 
     <p>Group B (South America)</p>
     <ol>
-        <li><a href="/Stats/Details/20">Zach W</a> 0-1</li>
-        <li><a href="/Stats/Details/28">Andrew P</a> 1-0</li>
+        <li><a href="/Stats/Details/20">Zach W</a> (0-1)</li>
+        <li><a href="/Stats/Details/28">Andrew P</a> (1-0)</li>
         <li><a href="/Stats/Details/39">Connie F</a></li>
         <li><a href="/Stats/Details/15">Steph J</a></li>
         <li><a href="/Stats/Details/34">Dan M</a></li>
@@ -51,10 +51,10 @@
 
     <p>Group C (Africa)</p>
     <ol>
-        <li><a href="/Stats/Details/17">Tim E</a></li>
-        <li><a href="/Stats/Details/21">Mike H</a></li>
+        <li><a href="/Stats/Details/17">Tim E</a> (1-0)</li>
+        <li><a href="/Stats/Details/21">Mike H</a> (1-0)</li>
         <li><a href="/Stats/Details/10">Sarah N</a></li>
-        <li><a href="/Stats/Details/19">Emilio V</a></li>
+        <li><a href="/Stats/Details/19">Emilio V</a> (0-2)</li>
         <li><a href="/Stats/Details/42">Matt W</a></li>
     </ol>
 
