updated some scores

--- a/JockeyGames.Client/Views/Home/Tournament.cshtml
+++ b/JockeyGames.Client/Views/Home/Tournament.cshtml
@@ -42,17 +42,17 @@
 
     <p>Group B (South America)</p>
     <ol>
-        <li><a href="/Stats/Details/20">Zach W</a> (0-1)</li>
+        <li><a href="/Stats/Details/20">Zach W</a> (1-1)</li>
         <li><a href="/Stats/Details/28">Andrew P</a> (1-0)</li>
         <li><a href="/Stats/Details/39">Connie F</a></li>
-        <li><a href="/Stats/Details/15">Steph J</a></li>
+        <li><a href="/Stats/Details/15">Steph J</a> (0-1)</li>
         <li><a href="/Stats/Details/34">Dan M</a></li>
     </ol>
 
     <p>Group C (Africa)</p>
     <ol>
-        <li><a href="/Stats/Details/17">Tim E</a> (1-0)</li>
-        <li><a href="/Stats/Details/21">Mike H</a> (1-0)</li>
+        <li><a href="/Stats/Details/17">Tim E</a> (2-0)</li>
+        <li><a href="/Stats/Details/21">Mike H</a> (1-1)</li>
         <li><a href="/Stats/Details/10">Sarah N</a></li>
         <li><a href="/Stats/Details/19">Emilio V</a> (0-2)</li>
         <li><a href="/Stats/Details/42">Matt W</a></li>
@@ -60,20 +60,20 @@
 
     <p>Group D (Europe)</p>
     <ol>
-        <li><a href="/Stats/Details/41">Glenn S</a></li>
+        <li><a href="/Stats/Details/41">Glenn S</a> (1-0)</li>
         <li><a href="/Stats/Details/13">Chris U</a></li>
         <li><a href="/Stats/Details/11">Kadie K</a></li>
-        <li><a href="/Stats/Details/35">Anthony R</a></li>
+        <li><a href="/Stats/Details/35">Anthony R</a> (0-1)</li>
         <li><a href="/Stats/Details/44">David G</a></li>
     </ol>
 
     <p>Group E (Asia)</p>
     <ol>
-        <li><a href="/Stats/Details/18">Dave Z</a></li>
-        <li><a href="/Stats/Details/33">Zach K</a></li>
+        <li><a href="/Stats/Details/18">Dave Z</a> (1-1)</li>
+        <li><a href="/Stats/Details/33">Zach K</a> (2-0)</li>
         <li><a href="/Stats/Details/32">Ashley M</a></li>        
         <li><a href="/Stats/Details/31">Will W</a></li>
-        <li><a href="/Stats/Details/37">Katie N</a></li>        
+        <li><a href="/Stats/Details/37">Katie N</a> (0-2)</li>        
     </ol>
 
     <p>X1 - X3 (Antartica) [top 3 of 6 players]</p>
