finally updated the tournament page with a bracket

--- a/JockeyGames.Client/Views/Home/Tournament.cshtml
+++ b/JockeyGames.Client/Views/Home/Tournament.cshtml
@@ -10,89 +10,15 @@
 
 <div>
     <h3>Ping Pong Madness (Tournament #2) rules</h3>
-    <ol>
-        <li>Based on your Match score®, you have been put in a group. Groups have been given a contient (similarly how in the World Cup, teams are from different countries)</li>
-        <li>Play 1 match (best 2 out of 3 games), against everyone in your group. (Put your scores in <a target="_blank" href="/matches/create">HERE</a>)</li>
-        <ul>
-            <li>Top 2 players in each group will progress to the bracket.</li>
-            <li>A head to head will serve as a tiebreaker (if one occurs).</li>
-            <li>In the event of a second tie, the player with more average points per game will determine the winner.</li>
-            <li>(Players will be denoted in the bracket by the letter of your group followed by a number - the top player of group C is 'C1')</li>
-        </ul>
-        <li>Anyone who did not place top 2 in your group can still play in the bracket.</li>
-        <ul>
-            <li>The next top 6 players will be placed in the bracked as determined by the win record (over all matches played in the tournament).</li>
-            <li>Both players play one game to 21 points to serve as a tiebraker (if one occurs). Multiple tiebreakers may need to be played if multiple ties occur</li>
-            <li>(Players will be denoted in the bracket by your position from this ranking - the top player is 'X1')</li>
-        </ul>
-        <li>The player's team who wins the bracket, wins the tournament</li>                                    
-        <li>Questions? Email <a href="mailto:zach.wenta@jockey.com">zach.wenta@jockey.com</a></li>
-    </ol>
+    <p>
+        Based on your previous scores, you have been seeded on your W/L rating.
+        World cup style scoring has been dropped as everyone didn't play their
+        games. This tournament will be a single elimination tournament. Whoever
+        wins best of 3 games (11 points per game) will win the match. Enter
+        in your scores when you play your game <a target="_blank" href="/matches/create">HERE</a>, 
+        or email your scores to <a href="mailto:zach.wenta@jockey.com">zach.wenta@jockey.com</a>
+    </p>
 
     <hr />
-    <h3>Groups</h3>
-    <p>Group A (North America)</p>
-    <ol>
-        <li><a href="/Stats/Details/38">Nathan B</a> (1-0)</li>
-        <li><a href="/Stats/Details/30">Phil A</a></li>
-        <li><a href="/Stats/Details/9">Josh M</a></li>
-        <li><a href="/Stats/Details/29">Matt N</a> (0-1)</li>
-        <li><a href="/Stats/Details/16">Jenni A</a></li>        
-    </ol>
-
-    <p>Group B (South America)</p>
-    <ol>
-        <li><a href="/Stats/Details/20">Zach W</a> (1-1)</li>
-        <li><a href="/Stats/Details/28">Andrew P</a> (1-0)</li>
-        <li><a href="/Stats/Details/39">Connie F</a></li>
-        <li><a href="/Stats/Details/15">Steph J</a> (0-1)</li>
-        <li><a href="/Stats/Details/34">Dan M</a></li>
-    </ol>
-
-    <p>Group C (Africa)</p>
-    <ol>
-        <li><a href="/Stats/Details/17">Tim E</a> (2-0)</li>
-        <li><a href="/Stats/Details/21">Mike H</a> (1-1)</li>
-        <li><a href="/Stats/Details/10">Sarah N</a></li>
-        <li><a href="/Stats/Details/19">Emilio V</a> (0-2)</li>
-        <li><a href="/Stats/Details/42">Matt W</a></li>
-    </ol>
-
-    <p>Group D (Europe)</p>
-    <ol>
-        <li><a href="/Stats/Details/41">Glenn S</a> (1-0)</li>
-        <li><a href="/Stats/Details/13">Chris U</a></li>
-        <li><a href="/Stats/Details/11">Kadie K</a></li>
-        <li><a href="/Stats/Details/35">Anthony R</a> (0-1)</li>
-        <li><a href="/Stats/Details/44">David G</a></li>
-    </ol>
-
-    <p>Group E (Asia)</p>
-    <ol>
-        <li><a href="/Stats/Details/18">Dave Z</a> (1-1)</li>
-        <li><a href="/Stats/Details/33">Zach K</a> (2-0)</li>
-        <li><a href="/Stats/Details/32">Ashley M</a></li>        
-        <li><a href="/Stats/Details/31">Will W</a></li>
-        <li><a href="/Stats/Details/37">Katie N</a> (0-2)</li>        
-    </ol>
-
-    <p>X1 - X3 (Antartica) [top 3 of 6 players]</p>
-    <ol>
-        <li>TBD</li>
-    </ol>
-
-    <p>X4 - X6 (Australia) [bottom 3 of 6 players]</p>
-    <ol>
-        <li>TBD</li>
-    </ol>
-
-    <hr />
-    <div id="BracketsNinja_f41f8d6e1c6d2bbf0de45c01d240f0cf"></div>
-    <script type="text/javascript">
-        (function() {
-        var bn = document.createElement('script'); bn.type = 'text/javascript';
-        bn.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'www.bracketsninja.com/api/bracket/f41f8d6e1c6d2bbf0de45c01d240f0cf?bnurl=' + window.location.href;
-        var s = document.getElementsByTagName('head')[0].appendChild(bn);
-        })();
-    </script>
+    <iframe src="http://challonge.com/cwqhjocx/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
 </div>
